--- a/src/templates/App/App.css
+++ b/src/templates/App/App.css
@@ -530,3 +530,55 @@ footer .right-area span {
         margin-bottom: 5.6rem
     }
 }
+.carousel1 {
+    height: 216px;
+    width: 1388px;
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    display: inline-flex;
+    background: var(--gray-dark-01);
+
+  }
+  
+  .carousel1::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .carousel1 .item {
+    margin: 10px;
+    padding: 10px;
+    width: 385px;
+    height:216px ;
+    border-radius: 16px;
+    flex: none;
+  }
+  
+  .carousel1 .item .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+   .button1s {
+    width: 5%;
+    text-align: center;
+    margin-right: 1220px;
+    position: absolute;
+  }
+  
+  .button2s {
+    width: 5%;
+    text-align: center;
+    margin-right: -1300px;
+    position: absolute;
+  } 
+  .button1s .btt1 {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+  .button1s .btt1:first-child img {
+    transform: rotate(180deg);
+  }
+  
