--- a/src/templates/Agenda/agenda.css
+++ b/src/templates/Agenda/agenda.css
@@ -714,3 +714,68 @@ button {
     margin-left: 135px;
     position: absolute;
 } 
+body {
+    font-family: Arial, sans-serif;
+    background-color: #1a1a1a;
+    color: white;
+}
+
+.tabs {
+    margin-bottom: 589px;
+}
+
+button {
+    padding: 10px 25px;
+    border: none;
+    cursor: pointer;
+}
+
+button.active {
+    background-color: #ffc107;
+    color: black;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+}
+
+th, td {
+    padding: 12px;
+    border: 1px solid #444;
+    text-align: left;
+}
+
+th {
+    background-color: #333;
+}
+
+td {
+    background-color: #222;
+}
+
+.status-livre {
+    color: green;
+}
+
+.status-ocupado {
+    color: red;
+}
+
+.status-btn {
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.status-realizado {
+    color: green;
+}
+
+.status-nao-realizado {
+    color: red;
+}
+.services-schedules{
+    background: var(--gray-dark-01);
+}
