--- a/src/templates/Agenda/agenda.css
+++ b/src/templates/Agenda/agenda.css
@@ -122,7 +122,6 @@ header .btn:hover {
         display: none
     }
 }
-
 footer {
     position: relative;
     padding-top: 9.6rem;
@@ -721,11 +720,15 @@ body {
 }
 
 .tabs {
-    margin-bottom: 811px;
+    margin-bottom: 55%;
+    position: absolute;
+    margin-left: -1200px
 }
 
 .tabs2 {
-    margin-bottom: 811px;
+    margin-bottom: 55%;
+    position: absolute;
+    margin-left: -800px;
 }
 button {
     padding: 10px 25px;
@@ -780,5 +783,57 @@ td {
     color: red;
 }
 .services-schedules{
+    margin-top: -98px;
     background: var(--gray-dark-01);
+
+}
+.barbearia-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background:var(--gray-dark-01);
+    padding: 20px;
+    width:100%;
+    height:264px;
+}
+.barbearia-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 200px;
+}
+.barbearia-info img {
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+}
+.barbearia-info h3 {
+    margin: 10px 0;
+}
+.rating {
+    display: flex;
+    align-items: center;
+}
+.stars {
+    display: flex;
+}
+.stars input {
+    display: none;
+}
+.stars label {
+    font-size: 30px;
+    color: #ccc;
+    cursor: pointer;
+    transition: color 0.2s;
+}
+.stars input:checked ~ label,
+.stars label:hover,
+.stars label:hover ~ label {
+    color: gold;
+}
+.descricao {
+    margin-right: 42px;
+    font-size: 14px;
+    max-width: 385px;
 }
