--- a/src/templates/Perfil/perfil.css
+++ b/src/templates/Perfil/perfil.css
@@ -837,3 +837,129 @@ td {
     font-size: 14px;
     max-width: 385px;
 }
+section {
+    padding: 20px;
+}
+
+.barbearia-info {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.minha-barbearia {
+    text-align: center;
+}
+
+.barbearia-img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.stars span {
+    color: gold;
+    font-size: 1.5em;
+}
+
+.perfil-form {
+    background-color: #444;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.perfil-form h3 {
+    margin-bottom: 10px;
+}
+
+.perfil-form label {
+    display: block;
+    margin: 10px 0 5px;
+}
+
+input[type="number"],
+input[type="file"] {
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: none;
+}
+
+button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #ffcc00;
+    color: black;
+    cursor: pointer;
+    
+}
+
+.perfil-custom {
+    text-align: center;
+}
+
+.modelo-img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+.descricao {
+    text-align: center;
+    background-color: #333;
+    padding: 20px;
+}
+
+.carrossel {
+    text-align: center;
+}
+
+.carrossel-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.item {
+    margin: 0 10px;
+    text-align: center;
+}
+
+.item img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.status {
+    display: block;
+    margin-top: 5px;
+}
+
+.ativa {
+    color: green;
+}
+
+.desativa {
+    color: red;
+}
+
+.add-new {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    background-color: #444;
+    border-radius: 50%;
+    color: #fff;
+    font-size: 2em;
+}
+
+.add-new input {
+    display: none;
+}
