--- a/src/templates/Perfil/perfil.css
+++ b/src/templates/Perfil/perfil.css
@@ -878,15 +878,14 @@ section {
     margin: 10px 0 5px;
 }
 
-input[type="number"],
 input[type="file"] {
     width: 100%;
-    padding: 8px;
-    border-radius: 4px;
     border: none;
 }
-
-button {
+.number{
+    color: #444;
+}
+.button2 {
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
@@ -913,11 +912,11 @@ button {
     padding: 20px;
 }
 
-.carrossel {
+.carrossel2 {
     text-align: center;
 }
 
-.carrossel-container {
+.carrossel2-container {
     display: flex;
     justify-content: center;
     margin-top: 20px;
@@ -931,7 +930,6 @@ button {
 .item img {
     width: 100px;
     height: 100px;
-    border-radius: 50%;
 }
 
 .status {
