--- a/src/templates/Perfil/perfil.css
+++ b/src/templates/Perfil/perfil.css
@@ -836,6 +836,7 @@ td {
     margin-right: 42px;
     font-size: 14px;
     max-width: 385px;
+    background: var(--gray-dark-01);
 }
 section {
     padding: 20px;
@@ -864,7 +865,7 @@ section {
 }
 
 .perfil-form {
-    background-color: #444;
+    background: var(--gray-dark-01);
     padding: 20px;
     border-radius: 8px;
 }
@@ -902,7 +903,6 @@ input[type="file"] {
 .modelo-img {
     width: 150px;
     height: 150px;
-    border-radius: 50%;
     margin-bottom: 10px;
 }
 
@@ -981,7 +981,7 @@ input[type="file"] {
 .barbearia-img {
     width: 150px;
     height: 150px;
-    border-radius: 50%;
+ 
 }
 
 .stars span {
@@ -1028,7 +1028,6 @@ input[type="file"] {
 .modelo-img {
     width: 150px;
     height: 150px;
-    border-radius: 50%;
     margin-bottom: 10px;
 }
 
@@ -1056,7 +1055,6 @@ input[type="file"] {
 .item img {
     width: 100px;
     height: 100px;
-    border-radius: 50%;
 }
 
 .status {
@@ -1107,7 +1105,6 @@ input[type="file"] {
 .item img {
     width: 100px;
     height: 100px;
-    border-radius: 50%;
 }
 
 .status {
