--- a/src/templates/Desktop/desktop.css
+++ b/src/templates/Desktop/desktop.css
@@ -1253,7 +1253,7 @@ border: none;
     right: 10px; /* Ajuste conforme necessário */
 }
 
-.btt, .btt2 {
+ .btt2 {
     padding: 10px;
     border: none;
 
@@ -1261,6 +1261,15 @@ border: none;
     cursor: pointer;
     transition: background-color 0.3s;
 
+}
+.btt {
+    padding: 10px;
+    border: none;
+
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-left: -1258px;
 }
 .h2-desktop{
    margin-top: 0px;
